update the KaKs4DTV to V0.02

--- a/pipline/KaKs4DTv/config.ini
+++ b/pipline/KaKs4DTv/config.ini
@@ -1,7 +1,11 @@
 #!/bin/bash
 ## Must modify part
-group=1
-threads=32 #使用的cpu数目
+group=2 
+threads=24 #使用的cpu数目
+
+#请一定要修改工作路径 默认运行是在软件安装的路径。建议新建一个目录，把文件都放在新的目录下，然后在此处指定为该目录。
+## 格式为 "/home/share/data" ot "./data1/testdata"
+WorkPath="/share/home/chaimao1/database/test" 
 if [ $group -eq 1 ];then
 	#一个基因组的设置
 	group=1 #样本组数，只能是1或2，应该和输入的参数的数目一致
@@ -16,14 +20,14 @@ if [ $group -eq 1 ];then
 elif [ $group -eq 2 ];then
 	#2个基因组的设置
 	group=2
-	key=(Name ID) #gff3文件的第9列的值
+	key=(transcript_id ID) #gff3文件的第9列的值
 	type=(mRNA mRNA) #gff3文件的第3列的字符
-	sample=(M.domestica P.communis)
-	abbr=(Mdo Pco)
-	gff3=(gene_models_20170612.gff3.gz PyrusCommunis_BartlettDHv2.0.gff)
-	protein=(Mdo.pep.fasta Pco.pep.fasta)
-	cds=(Mdo.cds.fasta Pco.cds.fasta)
-	chrnum=(17,17)
+	sample=(A.trichopoda S.pommunis)
+	abbr=(Ath Spo)
+	gff3=(Ath.gff3 Spo.gff3)
+	protein=(Ath.pep.fa.gz Spo.genome.protein.fa)
+	cds=(Ath.cds.fa.gz Spo.cds.fa)
+	chrnum=(1,1)
 else
 	echo "请先修改config.ini中第3行的group的数量为1或2.1表示自身共线性，2表示2个基因组共线性。"
 	exit
@@ -34,7 +38,7 @@ fi
 #########################################Copyright & Version info#########################################################
 ##Builder Info
 Author="Mol Chai"
-Version="V0.01"
+Version="V0.02"
 Builddate="2021-03-18"
 Email="chaimol@163.com"
 Github="https://www.github.com/chaimol/"
