--- a/pipline/KaKs4DTv/config.ini
+++ b/pipline/KaKs4DTv/config.ini
@@ -24,7 +24,7 @@ elif [ $group -eq 2 ];then
 	type=(mRNA mRNA) #gff3文件的第3列的字符
 	sample=(A.trichopoda S.pommunis)
 	abbr=(Ath Spo)
-	gff3=(Ath.gff3 Spo.gff3)
+	gff3=(Ath.chr1.gff3 Spo.chr1.gff3)
 	protein=(Ath.pep.fa.gz Spo.genome.protein.fa)
 	cds=(Ath.cds.fa.gz Spo.cds.fa)
 	chrnum=(1,1)
@@ -39,6 +39,6 @@ fi
 ##Builder Info
 Author="Mol Chai"
 Version="V0.02"
-Builddate="2021-03-18"
+Builddate="2021-03-19"
 Email="chaimol@163.com"
 Github="https://www.github.com/chaimol/"
