--- a/pipline/KK4D/config.ini
+++ b/pipline/KK4D/config.ini
@@ -29,7 +29,7 @@ elif [ $group -eq 2 ];then
 	cds=(Ath.cds.fa.gz Spo.cds.fa)
 	chrnum=(1,1)
 else
-	echo "请先修改config.ini中第3行的group的数量为1或2.1表示自身共线性，2表示2个基因组共线性。"
+	echo "请先修改config.ini中第3行的group的数量为1或2. 1表示自身共线性，2表示2个基因组共线性。"
 	exit
 	return 1
 fi
@@ -41,4 +41,4 @@ Author="Mol Chai"
 Version="V0.02"
 Builddate="2021-03-19"
 Email="chaimol@163.com"
-Github="https://www.github.com/chaimol/"
+Github="https://www.github.com/chaimol/KK4D"
